<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:background="@drawable/background1"
    tools:context=".Signup">

    <EditText
        android:id="@+id/firstname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="30dp"
        android:background="@color/mywish1"
        android:drawableStart="@drawable/person1"
        android:hint="@string/String12"
        android:padding="1dp"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/middlename"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/firstname"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="30dp"
        android:background="@color/mywish1"
        android:drawableStart="@drawable/person1"
        android:hint="@string/String14"
        android:padding="1dp"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/lastname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/middlename"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="30dp"
        android:background="@color/mywish1"
        android:drawableStart="@drawable/person1"
        android:hint="@string/String13"
        android:padding="1dp"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/userid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lastname"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="30dp"
        android:background="@color/mywish1"
        android:drawableStart="@drawable/person1"
        android:hint="@string/String11"
        android:padding="1dp"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/passwordset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/userid"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="30dp"
        android:background="@color/mywish1"
        android:drawableStart="@drawable/person2"
        android:hint="@string/String16"
        android:padding="1dp"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/emailid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/passwordset"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="30dp"
        android:background="@color/mywish1"
        android:drawableStart="@drawable/person1"
        android:hint="@string/String10"
        android:padding="1dp"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/phoneid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/emailid"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="30dp"
        android:background="@color/mywish1"
        android:drawableStart="@drawable/person1"
        android:hint="@string/String15"
        android:padding="1dp"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <Button

        android:id="@+id/createid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="500dp"
        android:background="@color/teal_700"
        android:padding="10dp"
        android:text="@string/String17"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />


</RelativeLayout>