<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background1"
    tools:context=".SecondActivity">

    <EditText
        android:id="@+id/newpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="30dp"
        android:background="@color/mywish1"
        android:drawableStart="@drawable/person2"
        android:hint="@string/String6"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/conformpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="220dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="30dp"
        android:background="@color/mywish1"
        android:drawableStart="@drawable/person2"
        android:hint="@string/String7"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <Button
        android:id="@+id/finished"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="116dp"
        android:layout_marginTop="350dp"
        android:text="@string/String8"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:padding="10dp"
        android:background="@color/teal_700"/>

</RelativeLayout>