<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background1"
    android:padding="10dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:gravity="center_horizontal"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/loginid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signup"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="30dp"
        android:background="@color/mywish1"
        android:drawableStart="@drawable/person1"
        android:hint="@string/String1"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/passwordid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loginid"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="@color/mywish1"
        android:drawableLeft="@drawable/person2"
        android:hint="@string/String2"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <Button
        android:id="@+id/loginbtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/passwordid"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:padding="10dp"
        android:text="@string/String3"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:backgroundTint="@color/teal_700" />


    <Button
        android:id="@+id/signupbtn"
        style="@style/Widget.Material3.Button.OutlinedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loginbtn"
        android:layout_marginStart="150dp"
        android:layout_marginTop="169dp"
        android:onClick="functionclicked2"
        android:text="SIGN UP"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/secondbtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/passwordid"
        android:layout_marginStart="150dp"
        android:gravity="center_horizontal"
        android:onClick="functionclicked1"
        android:text="@string/String4"
        android:textColor="@color/mywish1"
        android:textSize="20sp" />

    <TextView

        android:id="@+id/donthaveaccountid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="602dp"
        android:text="Dont have an account?"
        android:textColor="@color/white"
        android:textSize="15dp"
        android:textStyle="bold" />


</RelativeLayout>